BEGIN;

CREATE TABLE IF NOT EXISTS "user" (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  public_id TEXT,
  name TEXT,
  role TEXT CHECK (role IS NULL OR role IN ('fellow', 'admin', 'PO')),
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  discord_name TEXT,
  line_id TEXT,
  phone TEXT,
  linkedin TEXT,
  photo_url TEXT,
  country TEXT,
  update_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  gmail TEXT,
  last_login_at TIMESTAMPTZ
);

CREATE TABLE IF NOT EXISTS cohort (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  name TEXT,
  start_date DATE,
  end_date DATE,
  presentation_date DATE,
  is_active BOOLEAN NOT NULL DEFAULT FALSE,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  created_by INTEGER,
  FOREIGN KEY (created_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS sprint (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cohort_id INTEGER,
  name TEXT,
  description TEXT,
  starts_on TIMESTAMPTZ,
  submission_deadline TIMESTAMPTZ,
  is_current BOOLEAN NOT NULL DEFAULT FALSE,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  created_by INTEGER,
  FOREIGN KEY (cohort_id) REFERENCES cohort(id) ON DELETE CASCADE,
  FOREIGN KEY (created_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS learning_block (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cohort_id INTEGER,
  code TEXT,
  kind TEXT CHECK (kind IS NULL OR kind IN ('block', 'special')),
  title TEXT,
  description TEXT,
  sort_order INTEGER NOT NULL DEFAULT 0,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  created_by INTEGER,
  FOREIGN KEY (cohort_id) REFERENCES cohort(id) ON DELETE CASCADE,
  FOREIGN KEY (created_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS "case" (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cohort_id INTEGER,
  sprint_id INTEGER,
  title TEXT,
  case_owner TEXT,
  status TEXT,
  summary TEXT,
  file_name TEXT,
  published_date DATE,
  googledrive_link TEXT,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  theme TEXT,
  create_by INTEGER,
  FOREIGN KEY (cohort_id) REFERENCES cohort(id) ON DELETE CASCADE,
  FOREIGN KEY (sprint_id) REFERENCES sprint(id) ON DELETE SET NULL,
  FOREIGN KEY (create_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS "group" (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cohort_id INTEGER,
  name TEXT,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  case_id INTEGER,
  update_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  start_date DATE,
  end_date DATE,
  created_by INTEGER,
  FOREIGN KEY (cohort_id) REFERENCES cohort(id) ON DELETE CASCADE,
  FOREIGN KEY (case_id) REFERENCES "case"(id) ON DELETE SET NULL,
  FOREIGN KEY (created_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS team (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  group_id INTEGER,
  name TEXT,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  case_id INTEGER,
  update_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  created_by INTEGER,
  FOREIGN KEY (group_id) REFERENCES "group"(id) ON DELETE CASCADE,
  FOREIGN KEY (case_id) REFERENCES "case"(id) ON DELETE SET NULL,
  FOREIGN KEY (created_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS case_submission (
  case_id INTEGER,
  team_id INTEGER,
  status TEXT NOT NULL DEFAULT 'pending' CHECK (status IN ('pending', 'submitted', 'reviewed')),
  submission_url TEXT,
  submitted_at TIMESTAMPTZ,
  reviewed_at TIMESTAMPTZ,
  updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (case_id, team_id),
  FOREIGN KEY (case_id) REFERENCES "case"(id) ON DELETE CASCADE,
  FOREIGN KEY (team_id) REFERENCES team(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS admin (
  user_id INTEGER PRIMARY KEY,
  FOREIGN KEY (user_id) REFERENCES "user"(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS fellow (
  user_id INTEGER PRIMARY KEY,
  team_id INTEGER,
  university TEXT,
  major TEXT,
  status TEXT CHECK (status IS NULL OR status IN ('confirmed', 'pending', 'dropped')),
  group_id INTEGER,
  teamflow TEXT,
  availability_visible BOOLEAN NOT NULL DEFAULT FALSE,
  FOREIGN KEY (user_id) REFERENCES "user"(id) ON DELETE CASCADE,
  FOREIGN KEY (team_id) REFERENCES team(id) ON DELETE SET NULL,
  FOREIGN KEY (group_id) REFERENCES "group"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS fellow_availability (
  member_id INTEGER,
  day_of_week TEXT CHECK (day_of_week IN ('Mon', 'Tue', 'Wed', 'Thu', 'Fri', 'Sat', 'Sun')),
  available BOOLEAN NOT NULL DEFAULT TRUE,
  updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (member_id, day_of_week),
  FOREIGN KEY (member_id) REFERENCES "user"(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS mentor (
  user_id INTEGER,
  team_id INTEGER,
  PRIMARY KEY (user_id, team_id),
  FOREIGN KEY (user_id) REFERENCES "user"(id) ON DELETE CASCADE,
  FOREIGN KEY (team_id) REFERENCES team(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS assignment (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cohort_id INTEGER,
  sprint_id INTEGER,
  learning_block_id INTEGER,
  title TEXT,
  form_url TEXT,
  sheet_tab TEXT,
  deadline TIMESTAMPTZ,
  description TEXT,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  update_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  created_by INTEGER,
  FOREIGN KEY (cohort_id) REFERENCES cohort(id) ON DELETE CASCADE,
  FOREIGN KEY (sprint_id) REFERENCES sprint(id) ON DELETE SET NULL,
  FOREIGN KEY (learning_block_id) REFERENCES learning_block(id) ON DELETE SET NULL,
  FOREIGN KEY (created_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS assignment_submission (
  assignment_id INTEGER,
  member_id INTEGER,
  submit_status INTEGER NOT NULL DEFAULT 0 CHECK (submit_status IN (0, 1)),
  submitted_at TIMESTAMPTZ,
  grade TEXT,
  PRIMARY KEY (assignment_id, member_id),
  FOREIGN KEY (assignment_id) REFERENCES assignment(id) ON DELETE CASCADE,
  FOREIGN KEY (member_id) REFERENCES "user"(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS resource (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  type TEXT CHECK (type IS NULL OR type IN ('CASE', 'LECTURE', 'ARTICLE', 'GUIDE', 'TEMPLATE', 'VIDEO', 'PDF', 'EXTERNAL')),
  name TEXT,
  description TEXT,
  url TEXT,
  duration TEXT,
  author TEXT,
  tag TEXT,
  learning_block_id INTEGER,
  sort_order INTEGER NOT NULL DEFAULT 0,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  created_by INTEGER,
  FOREIGN KEY (learning_block_id) REFERENCES learning_block(id) ON DELETE SET NULL,
  FOREIGN KEY (created_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE TABLE IF NOT EXISTS resource_read (
  resource_id INTEGER,
  member_id INTEGER,
  read_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  PRIMARY KEY (resource_id, member_id),
  FOREIGN KEY (resource_id) REFERENCES resource(id) ON DELETE CASCADE,
  FOREIGN KEY (member_id) REFERENCES "user"(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS api (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  assignment_id INTEGER,
  updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  FOREIGN KEY (assignment_id) REFERENCES assignment(id) ON DELETE CASCADE
);

CREATE TABLE IF NOT EXISTS events (
  id INTEGER GENERATED BY DEFAULT AS IDENTITY PRIMARY KEY,
  cohort_id INTEGER,
  name TEXT,
  description TEXT,
  event_date DATE,
  all_day BOOLEAN NOT NULL DEFAULT FALSE,
  start_time TEXT,
  end_time TEXT,
  timezone TEXT,
  location TEXT,
  user_id INTEGER,
  created_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  updated_at TIMESTAMPTZ NOT NULL DEFAULT CURRENT_TIMESTAMP,
  create_by INTEGER,
  FOREIGN KEY (cohort_id) REFERENCES cohort(id) ON DELETE CASCADE,
  FOREIGN KEY (user_id) REFERENCES "user"(id) ON DELETE SET NULL,
  FOREIGN KEY (create_by) REFERENCES "user"(id) ON DELETE SET NULL
);

CREATE INDEX IF NOT EXISTS idx_cohort_created_by ON cohort(created_by);
CREATE INDEX IF NOT EXISTS idx_fellow_team_id ON fellow(team_id);
CREATE INDEX IF NOT EXISTS idx_fellow_group_id ON fellow(group_id);
CREATE INDEX IF NOT EXISTS idx_sprint_cohort_id ON sprint(cohort_id);
CREATE INDEX IF NOT EXISTS idx_learning_block_cohort_id ON learning_block(cohort_id);
CREATE INDEX IF NOT EXISTS idx_group_cohort_id ON "group"(cohort_id);
CREATE INDEX IF NOT EXISTS idx_group_case_id ON "group"(case_id);
CREATE INDEX IF NOT EXISTS idx_team_group_id ON team(group_id);
CREATE INDEX IF NOT EXISTS idx_team_case_id ON team(case_id);
CREATE INDEX IF NOT EXISTS idx_case_submission_team_id ON case_submission(team_id);
CREATE INDEX IF NOT EXISTS idx_case_cohort_id ON "case"(cohort_id);
CREATE INDEX IF NOT EXISTS idx_case_sprint_id ON "case"(sprint_id);
CREATE INDEX IF NOT EXISTS idx_assignment_cohort_id ON assignment(cohort_id);
CREATE INDEX IF NOT EXISTS idx_assignment_sprint_id ON assignment(sprint_id);
CREATE INDEX IF NOT EXISTS idx_assignment_learning_block_id ON assignment(learning_block_id);
CREATE INDEX IF NOT EXISTS idx_resource_created_by ON resource(created_by);
CREATE INDEX IF NOT EXISTS idx_resource_learning_block_id ON resource(learning_block_id);
CREATE INDEX IF NOT EXISTS idx_resource_read_member_id ON resource_read(member_id);
CREATE INDEX IF NOT EXISTS idx_api_assignment_id ON api(assignment_id);
CREATE INDEX IF NOT EXISTS idx_events_cohort_id ON events(cohort_id);
CREATE INDEX IF NOT EXISTS idx_events_user_id ON events(user_id);
CREATE UNIQUE INDEX IF NOT EXISTS idx_user_public_id_unique
  ON "user" (public_id)
  WHERE public_id IS NOT NULL;

COMMIT;
