Table cohort {
  id               int          [pk]
  name             varchar
  start_date       date
  end_date         date
  presentation_date date
  is_active        boolean
  created_at       timestamp
  update_at        timestamp
  created_by       int          [note: '-> user.id (audit)']
}

Table user {
  id           int        [pk]
  public_id    varchar    [unique, note: 'human-facing fellow ID: SBIE-YYYY-NNN']
  name         varchar
  role         varchar    [note: 'fellow, admin, PO']
  created_at   timestamp
  discord_name varchar
  line_id      varchar
  phone        varchar
  linkedin     varchar
  photo_url    varchar
  country      varchar
  update_at    timestamp
  gmail        varchar    [note: 'unique case-insensitively; links Supabase Auth to the app user']
  last_login_at timestamp [null, note: 'most recent successful login']
}

// 1:1 extension of user — user_id IS the primary key (no id needed)
Table admin {
  user_id int [pk, ref: - user.id]
}

// mentor = which user mentors which team.
// (user_id, team_id) is the natural composite key — no id needed.
Table mentor {
  user_id int [ref: > user.id]
  team_id int [ref: > team.id]
  indexes {
    (user_id, team_id) [pk]
  }
}

// 1:1 extension of user — user_id IS the primary key (no id needed)
Table fellow {
  user_id    int      [pk, ref: - user.id]
  team_id    int      [ref: > team.id, note: 'current team']
  university varchar
  major      varchar
  status     varchar  [note: 'confirmed, pending, dropped']
  group_id   int      [ref: > group.id]
  teamflow   varchar
  availability_visible boolean [note: 'whether weekly availability is visible to teammates']
}

Table sprint {
  id                 int       [pk]
  cohort_id          int       [ref: > cohort.id]
  name               text
  description        text      [null]
  starts_on          timestamp
  submission_deadline timestamp
  is_current         boolean   [note: 'marks the active sprint for UI (or compute from dates)']
  created_at         timestamp
  update_at          timestamp
  created_by         int       [note: '-> user.id (audit)']
}

Table group {
  id         int       [pk]
  cohort_id  int       [ref: > cohort.id]
  name       varchar   [note: 'Team number']
  created_at timestamp
  case_id    int       [ref: > case.id]
  update_at  timestamp
  start_date date
  end_date   date
  created_by int       [note: '-> user.id (audit)']
}

Table team {
  id         int       [pk]
  group_id   int       [ref: > group.id]
  name       varchar   [note: 'Team number']
  created_at timestamp
  case_id    int       [ref: > case.id]
  update_at  timestamp
  created_by int       [note: '-> user.id (audit)']
}

Table learning_block {
  id          int       [pk]
  cohort_id   int       [ref: > cohort.id]
  code        varchar   [note: 'A, B, C, or a stable special section key']
  kind        varchar   [note: 'block, special']
  title       varchar
  description text
  sort_order  int
  created_at  timestamp
  update_at   timestamp
  created_by  int       [note: '-> user.id (audit)']
}

Table case {
  id               int       [pk]
  cohort_id        int       [ref: > cohort.id]
  sprint_id        int       [ref: > sprint.id]
  title            varchar
  case_owner       varchar   [note: 'sponsor / owner name (keep varchar, or make FK to user if owner is a platform account)']
  status           varchar
  summary          text
  file_name        varchar
  published_date   date
  googledrive_link varchar
  created_at       timestamp
  update_at        timestamp
  theme            varchar
  create_by        int       [note: '-> user.id (audit)']
}

Table case_submission {
  case_id        int       [ref: > case.id]
  team_id        int       [ref: > team.id]
  status         varchar   [note: 'pending, submitted, reviewed']
  submission_url varchar
  submitted_at   timestamp [null]
  reviewed_at    timestamp [null]
  updated_at     timestamp
  indexes {
    (case_id, team_id) [pk]
  }
}

Table assignment {
  id                int       [pk]
  cohort_id         int       [ref: > cohort.id]
  sprint_id         int       [ref: > sprint.id]
  learning_block_id int       [ref: > learning_block.id, null]
  title             varchar
  form_url          varchar
  sheet_tab         varchar   [null, note: 'Google Sheet tab that holds this assignment form responses']
  deadline          timestamp
  description       text
  created_at        timestamp
  update_at         timestamp
  created_by        int       [note: '-> user.id (audit)']
}

// This IS the junction table for the fellow <-> assignment N:N.
// (assignment_id, member_id) is the natural composite key — no id needed.
Table assignment_submission {
  assignment_id int       [ref: > assignment.id]
  member_id     int       [ref: > user.id, note: 'the fellow (= user.id) who submitted']
  submit_status int       [note: '0 = pending, 1 = submitted; overdue is derived when 0 and assignment.deadline has passed']
  submitted_at  timestamp [null, note: 'set when submit_status = 1']
  grade         varchar   [null, note: 'optional display grade for graded submissions']
  indexes {
    (assignment_id, member_id) [pk]
  }
}

Table resource {
  id                int       [pk]
  type              varchar   [note: 'CASE, LECTURE, ARTICLE, GUIDE, TEMPLATE, VIDEO, PDF, EXTERNAL']
  name              varchar
  description       text
  url               varchar
  duration          varchar
  author            varchar
  tag               varchar
  learning_block_id int       [ref: > learning_block.id, null]
  sort_order        int
  created_at        timestamp
  updated_at        timestamp
  created_by        int       [note: '-> user.id']
}

// Tracks whether a fellow has read/opened/completed a resource.
Table resource_read {
  resource_id int       [ref: > resource.id]
  member_id   int       [ref: > user.id, note: 'the fellow (= user.id) who read the resource']
  read_at     timestamp
  indexes {
    (resource_id, member_id) [pk]
  }
}

// API sync table: records pushes to Google Sheet for submissions
Table api {
  id            int       [pk]
  assignment_id int       [ref: > assignment.id]
  updated_at    timestamp
  created_at    timestamp
}

Table events {
  id          int       [pk]
  cohort_id   int       [ref: > cohort.id]
  name        varchar
  description text
  event_date  date
  all_day     boolean
  start_time  varchar
  end_time    varchar
  timezone    varchar
  location    varchar
  user_id     int       [ref: > user.id, note: 'owner']
  created_at  timestamp
  updated_at  timestamp
  create_by   int       [note: '-> user.id (audit)']
}

Table fellow_availability {
  member_id   int       [ref: > user.id, note: 'the fellow (= user.id)']
  day_of_week varchar   [note: 'Mon, Tue, Wed, Thu, Fri, Sat, Sun']
  available   boolean
  updated_at  timestamp
  indexes {
    (member_id, day_of_week) [pk]
  }
}
